--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="server.js"></script>
     <script src="app.js"></script>
+    
+
     <title>NodeServer</title>
 </head>
 <body>
